--- a/static/manifest.json
+++ b/static/manifest.json
@@ -1,10 +1,10 @@
 {
-  "name": "Ritchie Pub.",
+  "name": "月光晒谷",
   "short_name": "ritchie",
   "display": "standalone",
   "orientation": "any",
   "start_url": "./?utm_source=homescreen",
-  "theme_color": "#02b875",
+  "theme_color": "#3dc0f1",
   "background_color": "#fafafa",
   "icons": [
     {
